--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,42 @@
 
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="#">Login page</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register">Register</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container my-5">
+        <div class="card" style="width: 100%">
+            <div class="card-body">
+            <h5 class="card-title">Login form</h5>
+            <form onsubmit="return false;" id="form">
+                <div class="form-group">
+                  <label for="email" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="email" >
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="password" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+              </form>
+            </div>
+        </div>
+      </div>
+      <script src="./js/login.js"></script>
 </body>
 </html>
