--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
             <h5 class="card-title">Welcome back to the website</h5>
             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button class="btn btn-primary"><a href="/login">Login</a></button>
-            <button class="btn btn-primary"><a href="/register">Register</a></button>
+            <button class="btn btn-primary"><a href="/login" style="color:white"; text-decoration: none>Login</a></button>
+            <button class="btn btn-primary"><a href="/register" style="color:white"; text-decoration: none>Register</a></button>
 
             </div>
         </div>
