--- a/public/login.html
+++ b/public/login.html
@@ -32,13 +32,15 @@
             <form onsubmit="return false;" id="form">
                 <div class="form-group">
                   <label for="email" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="email" >
+                  <input type="email" class="form-control" id="email" autocomplete="off" required >
                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                   <label for="password" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="password">
+                  <input type="password" class="form-control" id="password" autocomplete="off" required>
                 </div>
+                <div class="alert alert-danger" role="alert" id="error" style="display: none;"></div>
+                <div class="alert alert-success" role="alert" id="success" style="display: none;"></div>   
                 <button type="submit" class="btn btn-primary">Register</button>
               </form>
             </div>
