--- a/public/register.html
+++ b/public/register.html
@@ -32,12 +32,12 @@
             <form onsubmit="return false;" id="form">
                 <div class="form-group">
                   <label for="email" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp" autocomplete="off" required>
                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                   <label for="password" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <input type="password" class="form-control" id="password" autocomplete="off" required>
                 </div>
                 <div class="alert alert-danger" role="alert" id="error" style="display: none;"></div>
                 <div class="alert alert-success" role="alert" id="success" style="display: none;"></div>   
