--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,13 @@
               <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
             </li>
           </ul>
         </div>
